Перенесено на версию 1.8 . Сайт поднимается на Digital Ocean. Данные из бд почему то не тянутся.